--- a/Contact.html
+++ b/Contact.html
@@ -18,9 +18,10 @@
             <input type='checkbox' id='check' />
             <span class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="DespreNoi.html">Despre Noi</a></li>
-                <li><a href="solutii.html">Solutii</a></li>
+                <li><a href="AboutUs.html">Despre Noi</a></li>
+                <li><a href="Solutions.html">Solutii</a></li>
                 <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="Contact.html">Contact</a></li>
                 <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
             </span>
             <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
